--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -20,12 +20,14 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: ./potfolio
 
     - name: Build production version
       run: npm run build
+      working-directory: ./potfolio
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist  # Change if your build output folder is different
+        publish_dir: ./potfolio/dist
