--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -20,14 +20,14 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-      working-directory: ./potfolio
+      working-directory: .
 
     - name: Build production version
       run: npm run build
-      working-directory: ./potfolio
+      working-directory: .
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./potfolio/dist
+        publish_dir: ./dist
